--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,18 @@ html, body {
     width: 100%;
 }
 
+.timesliderContainer {
+    width: 80%;
+    margin-left: 10%;
+}
+
+#timeslider-label {
+    text-align: center;
+    margin-top: 10px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
 .province-path{
     fill: none;
     stroke: #fff;
